Fix wrong orientation scrollbar buttons
Code cut and pasted from green-submarine, it works.

--- a/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets-assets-dark.css
@@ -434,22 +434,22 @@ notebook tab.right:checked {
 /*********************
  * Scrollbar buttons *
  *********************/
-/* cannot add these yet to the GIT repo, but they are needed to fix wrong arrow orientation
-   caused by BUG in gtk3.19
-
-scrollbar.vertical button:first-child {
-	-gtk-icon-source: -gtk-scaled(url("assets/scrollbar-arrow-up.svg"));
+scrollbar.vertical button.up {
+    -gtk-icon-source: -gtk-icontheme("pan-up-symbolic");
+    -gtk-icon-effect: highlight;
 }
 
-scrollbar.vertical button:last-child {
-	-gtk-icon-source: -gtk-scaled(url("assets/scrollbar-arrow-down.svg"));
+scrollbar.vertical button.down {
+    -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
+    -gtk-icon-effect: highlight;
 }
 
-scrollbar.horizontal button:first-child {
-	-gtk-icon-source: -gtk-scaled(url("assets/scrollbar-arrow-left.svg"));
+scrollbar.horizontal button.up {
+    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic");
+    -gtk-icon-effect: highlight;
 }
 
-scrollbar.horizontal button:last-child  {
-	-gtk-icon-source: -gtk-scaled(url("assets/scrollbar-arrow-right.svg"));
+scrollbar.horizontal button.down {
+    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
+    -gtk-icon-effect: highlight;
 }
-*/
